- fixed hardcoded strings - added content description - added double quotes to storeFile - fixed activity_main.xml - added meta tag for admob to android manifest - gradle install/release now runs - added transition to ArtworkDetailActivity.java

--- a/app/src/main/res/xml/global_tracker.xml
+++ b/app/src/main/res/xml/global_tracker.xml
@@ -3,7 +3,7 @@
 <resources>
 
     <!--Replace placeholder ID with your tracking ID-->
-    <string name="ga_trackingId" translatable="false"></string>
+    <string name="ga_trackingId" translatable="false">UA-129192123-1</string>
 
     <!--Enable automatic activity tracking-->
     <bool name="ga_autoActivityTracking">true</bool>
