--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <com.example.android.artplace.ui.mainactivity.adapters.MainViewPager
+    <kdrosado.trendyart.ui.mainactivity.adapters.MainViewPager
         android:id="@+id/view_pager_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
