--- a/app/src/main/res/layout/activity_search_detail.xml
+++ b/app/src/main/res/layout/activity_search_detail.xml
@@ -36,7 +36,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/placeholder" />
+                    app:srcCompat="@drawable/placeholder"
+                    android:contentDescription="@string/image" />
 
             </FrameLayout>
 
@@ -115,7 +116,8 @@
                         android:layout_height="300dp"
                         android:scaleType="fitCenter"
                         android:padding="10dp"
-                        app:srcCompat="@drawable/placeholder" />
+                        app:srcCompat="@drawable/placeholder"
+                        android:contentDescription="@string/image" />
 
                     <TextView
                         android:id="@+id/content_description"
@@ -127,7 +129,7 @@
                         android:layout_marginRight="16dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="24dp"
-                        android:text="Content Description"
+                        android:text="@string/Content_Description"
                         android:textAllCaps="false"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                         android:textColor="@color/colorText"
