--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,15 +3,14 @@
 
 <resources>
 
-    <color name="colorPrimary">#212121</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#7c4dff</color>
-    <color name="colorBackground">#5d5d5d</color>
-    <color name="cardBackground">#404040</color>
+    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorAccent">#D81B60</color>
+    <color name="colorBackground">#eeeeee</color>
+    <color name="cardBackground">#eeeeee</color>
     <color name="colorAccentLight">#b388ff</color>
     <color name="colorAccentDark">#651fff</color>
-
-    <color name="colorText">#fafafa</color>
+    <color name="colorText">#616161</color>
     <color name="colorWhiteTransparent">#80FFFFFF</color>
     <color name="colorIconsInactive">#a4a4a4</color>
     <color name="colorWhite">#FFFFFF</color>
