--- a/app/src/main/res/xml/global_tracker.xml
+++ b/app/src/main/res/xml/global_tracker.xml
@@ -3,7 +3,7 @@
 <resources>
 
     <!--Replace placeholder ID with your tracking ID-->
-    <string name="ga_trackingId" translatable="false">UA-129192123-1</string>
+    <string name="ga_trackingId" translatable="false">YOUR_GOOGLE_ANALYTICS_TRACKING_ID</string>
 
     <!--Enable automatic activity tracking-->
     <bool name="ga_autoActivityTracking">true</bool>
